<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/four_in_row_backgroung"
    android:orientation="vertical"
    tools:context="pt.isec.a21210827.fourinrow.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/ibPortuguese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/portugal_flag"
            android:contentDescription="@string/portuguese_flag" />

        <ImageButton
            android:id="@+id/ibEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/england_flag"
            android:contentDescription="@string/english_flag"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:text="@string/quatro_em_linha"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btOnePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/um_jogador" />

        <Button
            android:id="@+id/btTwoPlayerLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dois_jogadores_local" />

        <Button
            android:id="@+id/btTwoPlayerOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dois_jogadores_online" />

        <Button
            android:id="@+id/btLoadGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/carregar_jogo" />

        <Button
            android:id="@+id/btHighscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hist_rico_de_jogos" />

        <Button
            android:id="@+id/btCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cr_ditos" />
    </LinearLayout>

</LinearLayout>
