<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_one_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7sp"
    tools:context="pt.isec.a21210827.fourinrow.Activity.GameSettingsActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="20sp"
        android:text="@string/modo_de_jogo_um_jogador"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/nome_do_jogador" />

        <EditText
            android:id="@+id/etPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insira_o_seu_nome_aqui" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPlayerName2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/nome_do_jogador_2" />

        <EditText
            android:id="@+id/etPlayerName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insira_o_seu_nome_aqui" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp">

        <TextView
            android:id="@+id/tvGridSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/tamanho_do_tabuleiro" />

        <RadioGroup
            android:id="@+id/rgGridSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="7 X 7" />

            <RadioButton
                android:id="@+id/rb8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8 X 8" />

            <RadioButton
                android:id="@+id/rb9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9 X 9" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvColorPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/cor_das_pecas" />

        <RadioGroup
            android:id="@+id/rgColorPiece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/vermelho" />

            <RadioButton
                android:id="@+id/rbPreto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amarelo" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/tipo_de_cliente" />

        <RadioGroup
            android:id="@+id/rgMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente" />

            <RadioButton
                android:id="@+id/rbServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/servidor" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/comecar_jogo" />

</LinearLayout>
